test/fail/macro-resolve-leak-in.rnp
macro foo() {
  bar
}

{
  let bar = 1;
  foo();
}
---
 --> fail/macro-resolve-leak-in.rnp:2:3
  |
2 |   bar
  |   ^^^ bar is not declared
  |
